@@ -5,6 +5,7 @@ class ContasController < ApplicationController
   def show
     @conta = Conta.find(params[:id])
 	@alugueis = Aluguel.find(:all,:conditions => [" conta_id = ?", @conta.id])
+	@apts = ContasApartamento.find(:all, :conditions => ["conta_id = ?", @conta.id])
 
     respond_to do |format|
       format.html # show.html.erb
@@ -24,10 +25,7 @@ class ContasController < ApplicationController
 		apt.livre=true
 		apt.save
 	end
-    respond_to do |format|
-      format.html # encerrar.html.erb
-      format.xml  { render :xml => @conta }
-    end
 
+	redirect_to :controller => "apartamentos", :action => "index"
   end
 end
