@@ -1,45 +1,2 @@
 <h1>Encerrando conta</h1>
 
-<%form_for(@conta) do |f|%>
-	<%= f.error_messages %>
-	<p>
-		- Valor total dos alugueis:
-		<% total_aluguel = 0
-		for aluguel in @alugueis 
-			valor_aluguel = Servico.find(:first, :conditions => ["id = ?", aluguel.servico_id]).valor	
-			total_aluguel = total_aluguel + valor_aluguel
-			%>
-		<%end%>
-		<%= total_aluguel %>
-		reais.<br/>
-
-		- Valor total de diarias:
-		<% total_diaria = 0
-		for apt in @apts
-			tipo = Apartamento.find(:first, :conditions => ["id = ?", apt.apartamento_id]).tiposApartamento_id
-			valor_diaria = TiposApartamento.find(:first, :conditions => ["id = ?",tipo]).valor
-			total_diaria = total_diaria + valor_diaria
-			%>
-		<%end%>
-		<%= total_diaria %>
-
-		<br><br>
-		- Valor total a pagar:
-		<%= total_diaria+total_aluguel %>
-	</p>
-	<p>
-	<%=	# eh preciso escolher o tipo de pagamento e num de parcelas
-		# tem que criar o Pagamento com tais dados e incluir o valor total (acho.... ou então valor de cada parcela, não lembro)
-		# transferir a conta para conta_encerrada, deixar todos os apartamentos que foram alugados livres
-		# e acho que só.....
-		#
-		#f.label :tipos_pagamentos, "Tipo pagamento"
-	%>
-	<br/>
-	<%= #f.select ("tipos_pagamentos", TiposPagamento.all.collect {|t| [t.nome, t.id]}) 
-	%>
-	</p>
-
-	<%= f.submit "Encerrar"%>
-<%end%>
-
