@@ -1,7 +1,10 @@
-2009-05-25 Iuri Fernandes <iurifq@gmail.com>
+2009-05-26 Suzana Matos <suzana.matos@gmail.com>
+* Added redirection after encerrar
+
+2009-05-26 Iuri Fernandes <iurifq@gmail.com>
 * Alterations on alugar
 
-2009-05-25 Iuri Fernandes <iurifq@gmail.com>
+2009-05-26 Iuri Fernandes <iurifq@gmail.com>
 * began encerrar
 
 2009-05-26 Suzana Matos <suzana.matos@gmail.com>
